--- a/perfil.html
+++ b/perfil.html
@@ -52,27 +52,49 @@
     <main class="w-full md:flex md:px-[390px]">
         <aside class="">
             <div id="perfil" class="flex items-center space-y-2 space-x-4 py-6 px-4 border-b-2 border-zinc-100">
-                <div class="w-[80px] h-[80px] rounded-[50%] overflow-hidden">
-                    <img id="img" src="./assets/imgs/barbudo.jpg" alt="" class="w-full h-full">
+                <div class="w-[80px] h-[80px] rounded-[50%] overflow-hidden skeleton">
+                    <img id="img" src="" alt="" class="w-full h-full hidden" />
                 </div>
                 <div class="">
-                    <h1 id="name" class="mb-1 text-[1.25rem] font-[600]">William Italia Nogueira</h1>
-                    <div
-                        class="transition duration-200 hover:bg-zinc-200 inline-block text-zinc-400 rounded-lg hover:text-black/100">
-                        <i class="fa-brands fa-github"></i>
-                        <a id="login" href="#" class=""></a>
+                    <h1 id="name" class="mb-1 text-[1.25rem] font-[600] skeleton-name"></h1>
+                    <div id="nick-link"
+                        class="transition duration-200 hover:bg-zinc-200 inline-block text-zinc-400 rounded-lg hover:text-black/100 skeleton-link">
+                        <i id="igit" class="fa-brands fa-github hidden"></i>
+                        <a id="login" href="#" class="skeleton-link"></a>
                     </div>
                 </div>
             </div>
-            <ul id="list-bio">
 
+            <ul id="list-bio">
+                <!-- Skeleton bio item -->
+                <li class="border-b-2 border-zinc-100 flex items-center gap-2 p-4 skeleton-item">
+                    <h2 class="skeleton"></h2>
+                </li>
+                <li class="border-b-2 border-zinc-100 flex items-center gap-2 p-4 skeleton-item">
+                    <h2 class="skeleton"></h2>
+                    <p class="skeleton"></p>
+                </li>
+                <li class="border-b-2 border-zinc-100 flex items-center gap-2 p-4 skeleton-item">
+                    <h2 class="skeleton"></h2>
+                    <p class="skeleton"></p>
+                </li>
+                <li class="border-b-2 border-zinc-100 flex items-center gap-2 p-4 skeleton-item">
+                    <h2 class="skeleton"></h2>
+                    <p class="skeleton"></p>
+                </li>
+                <li class="border-b-2 border-zinc-100 flex items-center gap-2 p-4 skeleton-item">
+                    <h2 class="skeleton"></h2>
+                    <p class="skeleton"></p>
+                </li>
+                <li class="border-b-2 border-zinc-100 flex items-center gap-2 p-4 skeleton-item">
+                    <h2 class="skeleton"></h2>
+                </li>
             </ul>
         </aside>
 
         <div>
             <h1>teste</h1>
         </div>
-
     </main>
     <script src="./assets/js/perfil.js"></script>
 </body>
