feat: arrumando layout no cllr

--- a/perfil.html
+++ b/perfil.html
@@ -42,7 +42,7 @@
 <body class="bg-[#16161d] w-screen min-w-[320px]">
     <!-- navbar -->
     <nav id="navbar" class="h-[52px] bg-[#161B22] ">
-        <div class="flex items-center justify-between h-full w-full px-[1.5rem]  md:max-w-[1140px] mx-auto">
+        <div class="flex items-center justify-between h-full w-full gap-2 px-[1.5rem]  md:max-w-[1140px] mx-auto">
             <div class="flex items-center gap-2">
                 <i class="fa-brands fa-github text-2xl text-white"></i>
                 <h1 class="text-white font-light text-sm hidden sm:block">GitExplorer</h1>
@@ -57,7 +57,7 @@
     <!-- container content-->
     <div id="content-container" class="md:px-[1.5rem] md:py-[2.8rem] lg:max-w-[1140px] lg:mx-auto lg:flex lg:gap-4">
         <!-- perfil-container -->
-        <ul id="listbio" class=" bg-white rounded-lg shadow-xl lg:w-[30%]">
+        <ul id="listbio" class=" bg-white md:rounded-lg shadow-xl lg:w-[30%]">
             <li id="profile" class="flex flex-col items-center text-center px-[1.1rem] py-[1.5rem] border-b-[1px]">
                 <!-- img -->
                 <div class="w-[60px] h-[60px] bg-gray-300 overflow-hidden rounded-[100%]">
